# statismo-shaperegistration

./: CMakeLists.txt  README.md
src/: buildgpmodel.cpp  itkPenalizingMeanSquaresPointSetToImageMetric.h  shaperegistration.cpp  utils.h
